GNOME Bugzilla – Bug 636928
Fix mis-paired calls to JS_AddRoot/JS_RemoveRoot
Last modified: 2010-12-10 16:07:37 UTC
Fix a case where we would never remove a root we added and another place where we removed a root twice in a cleanup path.
Created attachment 176158 [details] [review] Fix mis-paired calls to JS_AddRoot/JS_RemoveRoot
Review of attachment 176158 [details] [review]: Both of these look good.