Fix mis-paired calls to JS_AddRoot/JS_RemoveRoot

Fix a case where we would never remove a root we added and another
place where we removed a root twice in a cleanup path.

https://bugzilla.gnome.org/show_bug.cgi?id=636928